--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
 <style>
   .container.is--map {
     display: flex;
-    height: 100vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -319,6 +318,7 @@
     padding: 50px 20px;
     border-radius: 20px;
     border: 10px solid #b95228;
+    margin-top: 20px;
   }
   
   .map {
