--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
   .map {
     position: relative;
     z-index: 2;
-    font-size: .55vw;
+    font-size: .55em;
   }
 
   .state path,
@@ -346,7 +346,7 @@
 
   .state.border{
     position: absolute;
-    top: -3px;
+    top: -4px;
     left: 0;
     z-index: -1;
   }
@@ -483,7 +483,7 @@
   
   .map__state.ok {
     width: 10.1em;
-    margin-top: 21.9em;
+    margin-top: 21.85em;
     margin-left: 23.8em;
   }
   
