--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   .state path,
   .state circle  {
     pointer-events: auto;
-    fill: #f9561647;
+    fill: #f1d3b4;
     stroke: rgba(249, 88, 22, .2);
     cursor: pointer;
     transition-duration: 0.15s;
@@ -738,5 +738,29 @@
 
   #tooltip table tbody tr td:first-child{
     min-width: 150px;
+  }
+
+  @media(max-width: 625px){
+    .container.is--map{
+      padding: 0;
+      border-radius: 15px;
+    }
+    .map{
+      transform: scale(.6);
+    }
+    #tooltip{
+      padding: 10px 0 0;
+      transform: translate(-50%, 40px);
+    }
+    #tooltip p{
+      font-size: 11px;
+    }
+    #tooltip table tbody tr td{
+      font-size: 12px;
+      padding: 4px 10px;
+    }
+    #tooltip table tbody tr td:first-child {
+      min-width: 130px;
+    }
   }
 </style>
