--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     padding: 50px 20px;
     border-radius: 20px;
     border: 10px solid #b95228;
-    margin-top: 20px;
+    margin: 20px auto 10px;
   }
   
   .map {
