--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     width: 100%;
     max-width: 800px;
-    background: #efffe6;
+    background: #FFFAF8;
     height: auto;
     padding: 50px 20px;
     border-radius: 20px;
@@ -330,7 +330,7 @@
   .state path,
   .state circle  {
     pointer-events: auto;
-    fill: #f1d3b4;
+    fill: #F4B49D;
     stroke: rgba(249, 88, 22, .2);
     cursor: pointer;
     transition-duration: 0.15s;
