--- a/index.html
+++ b/index.html
@@ -752,8 +752,9 @@
 
   #tooltip table tbody tr td{
     font-size: 12px;
+    font-weight: 600;
     color: #1B1818;
-    padding: 12px 15px;
+    padding: 6px 15px;
   }
 
   #tooltip table tbody tr td:first-child{
