--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
   .state:hover path,
   .state:hover circle {
-    fill: #f95816;
+    fill: #f95816 !important;
   }
 
   .map__state {
@@ -349,7 +349,7 @@
   .low-price .state circle{
     fill: #F4B49D;
   }
-  
+
   .medium-price .state path, 
   .medium-price .state circle{
     fill: #f59b7b;
