--- a/index.html
+++ b/index.html
@@ -791,18 +791,23 @@
       transform: scale(.6);
     }
     #tooltip{
-      padding: 10px 0 0;
       transform: translate(-50%, 40px);
+    }
+    #tooltip > div{
+      padding: 4px 10px;
     }
     #tooltip p{
       font-size: 11px;
     }
     #tooltip table tbody tr td{
-      font-size: 12px;
+      font-size: 11px;
       padding: 4px 10px;
     }
     #tooltip table tbody tr td:first-child {
       min-width: 130px;
+    }
+    #tooltip table tbody tr td:last-child{
+      font-size: 11px;
     }
   }
 </style>
