--- a/index.html
+++ b/index.html
@@ -352,12 +352,12 @@
 
   .medium-price .state path, 
   .medium-price .state circle{
-    fill: #f59b7b;
+    fill: #f7916b;
   }
 
   .high-price .state path, 
   .high-price .state circle{
-    fill: #f4774a;
+    fill: #eb6737;
   }
 
   .state.border{
