--- a/index.html
+++ b/index.html
@@ -347,17 +347,17 @@
 
   .low-price .state path, 
   .low-price .state circle{
-    fill: #F4B49D;
+    fill: #f8cfbd;
   }
 
   .medium-price .state path, 
   .medium-price .state circle{
-    fill: #f7916b;
+    fill: #f7966e;
   }
 
   .high-price .state path, 
   .high-price .state circle{
-    fill: #eb6737;
+    fill: #f95816;
   }
 
   .state.border{
